upgrade build.gradle